syntax = "proto3";

package customer.model;

import "google/protobuf/timestamp.proto";

option java_package = "com.yanivian.connect.customer.proto.model";
option java_multiple_files = true;

message Profile {
  string UserID = 1;
  string PhoneNumber = 2;
  int64 CreatedTimestampMillis = 3;
  optional string Name = 4;
  optional string EmailAddress = 5;
  optional int64 LastUpdatedTimestampMillis = 6;
}

message Image {
  string ID = 1;
  // ID of the user that uploaded and owns the image.
  string UserID = 2;
  int64 CreatedTimestampMillis = 3;
  // URL that can dynamically serve the image blob.
  string URL = 4;
}